sqlxo/tests/orm/derive/try/err/wrong_literal.stderr
error: expected string literal: #[sqlxo(table_name = "items")]
 --> tests/orm/derive/try/err/wrong_literal.rs:8:22
  |
8 | #[sqlxo(table_name = 123)]
  |                      ^^^
